# docker-containers

./: .gitignore  README.md
django_psql_service/: Pipfile  README.md  docker-compose.yml
django_psql_service/api/api/: settings.py
django_rest_psql_service/: Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml
django_rest_psql_service/api/api/: settings.py
fast_api_psql_service/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
fast_api_psql_service/api/: main.py
go_service/: README.md  docker-compose.yml  go.mod  go.sum  main.go
psql_service/: README.md  docker-compose.yml
psql_service/db/: init.sh
psql_service/db/schema_queries/: create_schema.sql  insert.sql
python_service/: Dockerfile  Pipfile  README.md  docker-compose.yml  main.py
